syntax = "proto3";
option go_package = ".;proto";

import "global.proto";
import "message/item.proto";

message SkuRequest {
    sint64 itemId = 1;
    sint64 skuId = 2;
}

message ItemDetailRequest {
    sint64 itemId = 1;
    sint32 iType = 2;
}

// 商品服务
service ItemService {
    // 获取商品值
    rpc GetItem(Int64)returns(SUnifiedViewItem)
    // 获取SKU
    rpc GetSku (SkuRequest) returns (SSku) {
    }
    // 获取商品的Sku-JSON格式,itemId
    rpc GetItemSkuJson (Int64) returns (String) {
    }
    // 获取商品详细数据
    rpc GetItemDetailData (ItemDetailRequest) returns (String) {
    }
    // 根据销售标签获取指定数目的商品
    rpc GetValueGoodsBySaleLabel(GetItemsByLabelRequest)returns(PagingShopGoodsResponse){}
    // 获取店铺分页上架的商品
    rpc GetShopPagedOnShelvesGoods(PagingShopGoodsRequest)returns(PagingShopGoodsResponse){}
    // 获取上架商品数据（分页）
    rpc GetPagedOnShelvesItem(PagingGoodsRequest)returns(PagingGoodsResponse){}
    // 获取上架商品数据
    rpc GetItems(GetItemsRequest)returns(PagingGoodsResponse){}
    // 获取所有的商品标签
    rpc GetAllSaleLabels(Empty)returns(ItemLabelListResponse){}
    // 获取销售标签
    rpc GetSaleLabel(IdOrName)returns(SItemLabel){}
    // 保存销售标签
    rpc SaveSaleLabel(SItemLabel)returns(Result){}
    // 删除销售标签
    rpc DeleteSaleLabel(Int64)returns(Result){}
}


// 商品销售类型
enum EItemSalesType{
    IT_NORMAL = 0;
    IT_WHOLESALE = 1;
}

message PagingGoodsRequest{
    EItemSalesType ItemType = 1;
    int64 CategoryId = 2;
    // 关键词
    string Keyword = 3;
    SPagingParams Params = 4;
}

message PagingShopGoodsRequest{
    int64 ShopId = 1;
    int64 CategoryId = 2;
    SPagingParams Params = 3;
}

