syntax = "proto3";
option go_package = ".;proto";

message DeleteProductRequest {
    int64 SellerId = 1;
    int64 ProductId = 2;
}
